Export sun.security.internal.spec module for bouncycastle in Java 17
Closes: https://github.com/quarkusio/quarkus/issues/21374